Added controllers. Added PlantUML documentation diagrams.